<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:paddingHorizontal="60dp"
    android:paddingBottom="50dp"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logobrain"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_name"
                android:textColor="@color/dusty_rose"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textColor="@color/dusty_rose"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/monday"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/monday"
                    android:layout_marginStart="30dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tuesday"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/tuesday"
                    android:layout_marginStart="30dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wednesday"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/wednesday"
                    android:layout_marginStart="30dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/thursday"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/thursday"
                    android:layout_marginStart="30dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/friday"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/friday"
                    android:layout_marginStart="30dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/saturday"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/saturday"
                    android:layout_marginStart="30dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sunday"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/sunday"
                    android:layout_marginStart="30dp"/>

            </TableRow>

        </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textColor="@color/dusty_rose"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Seleccionar fecha"
                android:id="@+id/deadline"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:backgroundTint="@color/dusty_rose"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/doneButton"
                />

        </LinearLayout>

    </ScrollView>
    


</LinearLayout>